# bitcoin-scrooge

./: Procfile  README.md  pyproject.toml
app/: __init__.py  config.py  date_form.py  main.py
app/services/: coingecko_service.py
app/templates/: index.html  layout.html  results.html
src/templates/: index.html  layout.html
