[tool.poetry]
name = "bitcoin-scrooge"
version = "0.1.0"
description = "Vincit, Rising Star Pre-Assignment"
authors = ["Pentti Lähdeaho <pentti.lahdeaho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
Flask-WTF = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
